# Claude-ast-index-search

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: bug-fix.md  research.md  review.md
.claude/rules/: architecture.md  commands.md  commits.md  parsers.md  release.md  testing.md  verify.md
.github/workflows/: release.yml  sync-plugin.yml
benches/: db_query.rs  index_build.rs  parser.rs
benches/fixtures/: sample.kt  sample.ts
crates/ast-index-mcp/: Cargo.toml
crates/ast-index-mcp/src/: format.rs  main.rs
docs/: benchmarks.md  db-schema.md  mcp-setup.md  smart-build-research.md  smoke-testing.md  telemetry-pipeline-guide.md
examples/: README.md
examples/.claude/rules/: ast-index.md
npm/: README.md  package.json
plugin/.claude-plugin/: plugin.json
plugin/skills/ast-index/: SKILL.md
scripts/: bump.sh  check-pr.sh  smoke.sh
src/: db.rs  indexer.rs  main.rs
src/commands/: analysis.rs  android.rs  files.rs  grep.rs  index.rs  ios.rs  management.rs  mod.rs  modules.rs  perl.rs  project_info.rs  watch.rs
src/parsers/: mod.rs
src/parsers/treesitter/: bsl.rs  common_lisp.rs  css.rs  dart.rs  gdscript.rs  java.rs  less.rs  matlab.rs  mod.rs  python.rs  ruby.rs  scss.rs  swift.rs  typescript.rs  zig.rs
tests/: css_tests.rs  files_command_tests.rs  fixture_runner.rs  indexer_detection_tests.rs  management_query_tests.rs  memory_tests.rs  parser_proptest.rs  path_resolver_tests.rs  sql_tests.rs  swift_issues_tests.rs  update_extra_roots_tests.rs  zig_tests.rs
(+14 files in other folders)
