[package]
name = "ast-index-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server that exposes ast-index commands to AI coding agents (Claude Code, Cursor, Codex, Cline, Continue, OpenCode, Windsurf, etc.)"
license = "MIT"

[[bin]]
name = "ast-index-mcp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
